fix flexbox bug on safari for flower position

--- a/styles/style.css
+++ b/styles/style.css
@@ -65,6 +65,7 @@ h2 {
 .coveredImage { 
 	width: 100%;
 	max-width: 720px;
+	flex: none;
 }
 
 .coveringCanvas { 
